<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/MainBackgroundColor"
    android:orientation="vertical"
    tools:context=".activity.ChaptersActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/ac_ll_top_menu"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/TitleBackgroundColor">

        <LinearLayout
            android:id="@+id/ac_ll_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="?attr/BackBackground"
                android:contentDescription="@string/btn_back_text" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/charters_text"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/ac_ll_sort"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/ac_iv_sort_img"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="@drawable/ico_sort_desc"
                android:contentDescription="@string/btn_more_text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ListView
        android:id="@+id/fs_lv_book_shelf"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/MenuBackgroundColor"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/ac_btnUpdate"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/read_sow_style"
            android:text="刷新"
            tools:ignore="ButtonStyle" />

    </LinearLayout>

</LinearLayout>