<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ibs_ll_item_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center_vertical"
    android:theme="@style/AppTextColor"
    android:gravity="center_vertical"
    android:orientation="horizontal"
    android:padding="6dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="72dp"
        android:layout_height="96dp"
        android:layout_marginEnd="6dp">

        <ImageView
            android:id="@+id/ibs_iv_cover"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="2dp"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:contentDescription="@string/cover_picture"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:srcCompat="@drawable/cover" />

        <ImageView
            android:id="@+id/ibs_iv_cover_frame"
            android:layout_width="72dp"
            android:layout_height="96dp"
            android:contentDescription="@string/cover_picture"
            android:scaleType="fitXY"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/cover_frame" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="4dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ibs_tv_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_weight="1"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="书名"
                android:textSize="18sp"
                android:textStyle="bold" />


            <LinearLayout
                android:id="@+id/ibs_ll_details"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:layout_width="16dp"
                    android:layout_height="4dp"
                    android:background="@drawable/img_more"
                    android:contentDescription="@string/btn_more_text" />
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="4dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ibs_tv_author"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="作者"
                 />

            <!--<TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="2dp"
                    android:layout_marginRight="2dp"
                    android:text="@string/delimiter" />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="未阅读章节数" />-->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/ibs_tv_last_update_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                
                android:text="最新更新事件" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="2dp"
                android:layout_marginRight="2dp"
                
                android:text="@string/delimiter" />

            <TextView
                android:id="@+id/ibs_tv_last_update_chapter"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:singleLine="true"
                
                android:text="最新章节名" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>