<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.BookInfoActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/abi_ll_title"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="?attr/TitleBackgroundColor"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/abi_ll_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.xrzx.commonlibrary.view.custom.ThemeImageView
                android:id="@+id/abi_iv_back"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:background="?attr/BackBackground"
                android:contentDescription="@string/btn_back_text" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/abi_ll_more"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginEnd="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.xrzx.commonlibrary.view.custom.ThemeImageView
                android:id="@+id/abi_iv_more"
                android:layout_width="20dp"
                android:layout_height="5dp"
                android:background="?attr/MoreBackground"
                android:contentDescription="@string/btn_more_text" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ScrollView
        android:id="@+id/abi_sv_main"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="?attr/MainBackgroundColor"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/abi_ll_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="12dp"
            android:paddingEnd="12dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:paddingTop="8dp"
                android:paddingBottom="8dp">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="105dp"
                    android:layout_height="140dp">

                    <ImageView
                        android:id="@+id/abi_iv_cover"
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_marginStart="8dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:contentDescription="@string/cover_picture"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:srcCompat="@drawable/cover" />

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="0dp"
                        android:layout_margin="6dp"
                        android:background="@drawable/cover_frame"
                        android:contentDescription="@string/cover_picture"
                        android:scaleType="fitXY"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                </androidx.constraintlayout.widget.ConstraintLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center_vertical"
                    android:orientation="vertical"
                    android:paddingStart="4dp"
                    android:paddingEnd="8dp">

                    <com.xrzx.commonlibrary.view.custom.ThemeTextView
                        android:id="@+id/abi_tv_name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="书籍名称"
                        android:textSize="30sp" />

                    <com.xrzx.commonlibrary.view.custom.ThemeTextView
                        android:id="@+id/abi_tv_author"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="书籍作者"
                        android:textSize="14sp" />

                    <com.xrzx.commonlibrary.view.custom.ThemeTextView
                        android:id="@+id/abi_tv_last_update_time"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="书籍最后更新时间"
                        android:textSize="14sp" />

                    <com.xrzx.commonlibrary.view.custom.ThemeTextView
                        android:id="@+id/abi_tv_type"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:text="书籍类型"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>

            <com.xrzx.commonlibrary.view.custom.ThemeTextView
                android:id="@+id/abi_tv_introduction"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minHeight="64dp"
                android:text="书籍简介"
                android:textSize="18sp" />

            <LinearLayout
                android:id="@+id/abi_ll_chapterItem"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <com.xrzx.commonlibrary.view.custom.ThemeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginEnd="8dp"
                    android:layout_marginBottom="8dp"
                    android:text="目录"
                    android:textSize="24sp"
                    android:textStyle="bold" />

                <com.xrzx.commonlibrary.view.custom.ThemeTextView
                    android:id="@+id/abi_tv_last_update_chapter_title"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ellipsize="end"
                    android:gravity="end"
                    android:maxLines="1"
                    android:text="最新章节名"
                    android:textSize="18sp" />

                <com.xrzx.commonlibrary.view.custom.ThemeTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="☞" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/abi_ll_menu"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:background="?attr/MenuBackgroundColor"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="8dp">

        <Button
            android:id="@+id/abi_btn_add_book_shelf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_weight="1"
            android:background="@drawable/default_style"
            android:text="@string/add_bookshelf_str"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />

        <Button
            android:id="@+id/abi_btn_read_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_weight="1"
            android:background="@drawable/read_sow_style"
            android:text="@string/read_now"
            android:textSize="18sp"
            tools:ignore="ButtonStyle" />
    </LinearLayout>

</LinearLayout>